add act deletion
